line spacing fix for syndicated articles

--- a/app/components/articles/syndicated-trending/syndicated-trending.component.less
+++ b/app/components/articles/syndicated-trending/syndicated-trending.component.less
@@ -78,11 +78,8 @@
     line-height: 20px;
     margin-top: 10px;
     text-overflow: ellipsis;
-    p:first-of-type{
-      margin-top:0;
-    }
     p{
-      margin: 20px 0;
+      margin:0;
     }
   }
   &-read-more {
@@ -133,10 +130,10 @@
     .syndicated-trending-article-content {
       font-size: 14px;
       height:58px;
-      line-height:1;
+      line-height:1!important;
       p {
-        margin:0;
-        line-height:1;
+        margin:0!important;
+        line-height:1!important;
       }
     }
   }
