--- a/app/webpages/syndicated-article-page/syndicated-article-page.page.less
+++ b/app/webpages/syndicated-article-page/syndicated-article-page.page.less
@@ -137,6 +137,10 @@
   }
   .content-exerpt {
     margin-bottom:30px;
+    line-height: 1.2;
+    p {
+      line-height: 1.2;
+    }
   }
   @media @mobile {
     .content-exerpt {
